--- a/src/main/resources/templates/admin/forms/trip.html
+++ b/src/main/resources/templates/admin/forms/trip.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="form-group">
-          <label for="cover_trip">Cover</label>
+          <label for="cover_trip">Cover Landscape (max size 600x400, 100kb)</label>
           <div class="wrap-file">
             <input type="file" id="cover_trip" data-parsley-required="false">
           </div>
@@ -114,6 +114,32 @@
           <div th:if="${not #strings.isEmpty(response.object.coverLandscape)}"
                class="wrap-img-cover_trip p-top-sm">
             <img th:src="${baseUrl + response.object.coverLandscape}"/>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="cover_trips">Cover Potrait (Max size 400x600, 100kb)</label>
+          <div class="wrap-file">
+            <input type="file" id="cover_trips" data-parsley-required="false">
+          </div>
+          <input type="hidden" id="hidden_cover_trips" name="coverPotrait"
+                 th:value="${response.object.coverPotrait}">
+          <!-- <input type="hidden" id="hidden_upload_thumb" name="thumbnail" th:value="${response.object.thumbnail}"> -->
+          <div class="wrap_cover_trips collapse">
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped"
+                   role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100"
+                   style="">
+              </div>
+            </div>
+            <div class="msg collapse text-info"><i class="fa fa-check"></i> Upload Succeed</div>
+            <div class="pre_img">
+              <img src="" alt="">
+            </div>
+          </div>
+          <div th:if="${not #strings.isEmpty(response.object.coverPotrait)}"
+               class="wrap-img-cover_trips p-top-sm">
+            <img th:src="${baseUrl + response.object.coverPotrait}"/>
           </div>
         </div>
 
@@ -228,6 +254,7 @@ $(function() {
       upload_trip("/api/trip/upload_icon", "icon_cover","#icon_cover", "#hidden_icon_cover",640,640, "landscape");
       upload_trip("/api/trip/upload_icon", "icon_publisher","#icon_publisher", "#hidden_icon_publisher",640,640, "potrait");
       upload_trip("/api/trip/upload_trip", "cover_trip","#cover_trip", "#hidden_cover_trip",640,640, "potrait");
+      upload_trip("/api/trip/upload_trip", "cover_trips","#cover_trips", "#hidden_cover_trips",640,640, "potrait");
       upload_trip("/api/trip/upload_trip", "map","#map", "#hidden_map",640,640, "potrait");
       console.log($('#trip-facility').val())
       general_editor()
