--- a/src/main/resources/templates/admin/forms/trip.html
+++ b/src/main/resources/templates/admin/forms/trip.html
@@ -18,6 +18,10 @@
 .collapse{
   display: none;
 }
+
+.sub-label{
+  font-size: 8pt;
+}
 </style>
 </head>
 <body>
@@ -92,7 +96,7 @@
         </div>
 
         <div class="form-group">
-          <label for="cover_trip">Cover Landscape (max size 600x400, 100kb)</label>
+          <label for="cover_trip">Cover Landscape <span class="sub-label">(ukuran gambar 600x400, maksimum 100kb)</span></label>
           <div class="wrap-file">
             <input type="file" id="cover_trip" data-parsley-required="false">
           </div>
@@ -118,7 +122,7 @@
         </div>
 
         <div class="form-group">
-          <label for="cover_trips">Cover Potrait (Max size 400x600, 100kb)</label>
+          <label for="cover_trips">Cover Potrait <span class="sub-label">(ukuran gambar 400x600, maksimum 100kb)</span></label>
           <div class="wrap-file">
             <input type="file" id="cover_trips" data-parsley-required="false">
           </div>
