--- a/src/main/resources/templates/admin/page/trip.html
+++ b/src/main/resources/templates/admin/page/trip.html
@@ -57,6 +57,7 @@
               <th>Title</th>
               <th>Duration</th>
               <th>Captain</th>
+              <th>Status</th>
               <th>Action</th>
             </tr>
           </thead>
