--- a/src/main/resources/templates/admin/page/accessory.html
+++ b/src/main/resources/templates/admin/page/accessory.html
@@ -21,6 +21,25 @@
       margin-left: 8px;
       font-weight: 600;
     }
+    .btn-confirmation{
+      width: 40%;
+      text-align: right;
+    }
+    .custom-popup .popup-body {
+        padding: 15px;
+    }
+    .text-center {
+        text-align: center;
+    }
+    .custom-popup {
+        background-color: #fff;
+        color: #777;
+        text-align: center!important;
+        border-radius: 10px;
+        -moz-border-radius: 10px;
+        -webkit-border-radius: 10px;
+        margin-top: 50px;
+    }
   </style>
 </head>
 <body>
@@ -37,6 +56,7 @@
           <th>Title</th>
           <th>Price</th>
           <th>Discount</th>
+          <th>Status</th>
           <th>Action</th>
         </tr>
         </thead>
@@ -46,12 +66,36 @@
       </table>
     </div>
   </div>
+  <div class="custom-popup collapse" id="publishConfirm">
+    <div class="popup-body text-center">
+      <h5>Are you sure to <i>publish</i> this <i>Content</i>?</h5>
+      <strong class="block m-top-xs"><i class="fa fa-exclamation-circle m-right-xs text-danger"></i>This action cannot be undone</strong>
+      <input type="hidden" name="api_id" value="">
+      <div class="text-center m-top-lg">
+        <a class="btn btn-info m-right-sm do-it">Yes</a>
+        <a class="btn btn-default cancel">Cancel</a>
+      </div>
+      <br/>
+    </div>
+  </div>
+  <div class="custom-popup collapse" id="takeoutConfirm">
+    <div class="popup-body text-center">
+      <h5>Are you sure to <i>take out</i> this <i>Content</i>?</h5>
+      <strong class="block m-top-xs"><i class="fa fa-exclamation-circle m-right-xs text-danger"></i>This action cannot be undone</strong>
+      <input type="hidden" name="api_id" value="">
+      <div class="text-center m-top-lg">
+        <a class="btn btn-info m-right-sm do-it">Yes</a>
+        <a class="btn btn-default cancel">Cancel</a>
+      </div>
+    </div>
+  </div>
 </div>
 <th:block layout:fragment="footer-js">
   <!--<script type="text/javascript" src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>-->
   <script src="../../plugins/datatables/jquery.dataTables.min.js"></script>
   <script src="../../plugins/datatables/dataTables.bootstrap.min.js"></script>
   <script src="../../js/si/accessoryList.js"></script>
+  <script src="../../js/si/jquery.popupoverlay.min.js"></script>
 </th:block>
 </body>
 </html>
