--- a/src/main/resources/templates/admin/page/trip-itinerary.html
+++ b/src/main/resources/templates/admin/page/trip-itinerary.html
@@ -55,7 +55,7 @@
           <th>No.</th>
           <th>Event Group Title</th>
           <th>Event Total</th>
-          <th>Status</th>
+          <!--<th>Status</th>-->
           <!--<th>Group Title</th>-->
           <th>Action</th>
         </tr>
