--- a/src/main/resources/templates/admin/forms/roadCaptain.html
+++ b/src/main/resources/templates/admin/forms/roadCaptain.html
@@ -57,7 +57,7 @@
 
         <div class="form-group">
           <label for="description">Description</label>
-          <textarea class="form-control" name="description" th:text="${response.object.description}" id="description" placeholder="Enter Captain Description"></textarea>
+          <textarea class="form-control mce-general" name="description" th:text="${response.object.description}" id="description" placeholder="Enter Captain Description"></textarea>
         </div>
       </div>
       <div class="box-footer">
@@ -67,11 +67,14 @@
   </div>
 </div>
 <th:block layout:fragment="footer-js">
+  <script src="//tinymce.cachefly.net/4.3/tinymce.min.js"></script>
+  <script src="../../js/si/tiny_mce.js"></script>
   <script src="../../js/si/jquery.html5uploader.min.js"></script>
   <script src="../../js/si/upload.js"></script>
   <script src="../../js/si/parsley.min.js"></script>
   <script>
     upload_trip("/api/trip/upload_trip", "image","#image", "#hidden_image",640,640, "landscape");
+    general_editor()
   </script>
 </th:block>
 
