--- a/src/main/resources/templates/admin/forms/testimonial.html
+++ b/src/main/resources/templates/admin/forms/testimonial.html
@@ -214,6 +214,11 @@ form.form-border .form-group {
         <label for="tag">Tag</label>
         <input type="text" name="tag" class="form-control" th:value="${response.object.tag}" id="tag" placeholder="Tag" required>
       </div>
+
+        <div class="form-group">
+          <label for="albumId">Album</label>
+          <input type="text" name="albumId" class="form-control" th:value="${response.object.albumId}" id="albumId" placeholder="Pick your album" required>
+        </div>
       </div>
       <div class="box-footer">
         <button id="submit-btn-testi" type="button" class="btn btn-primary">Submit</button>
@@ -288,6 +293,35 @@ form.form-border .form-group {
             response($.map(arrdata, function (value, key) {
                 return{
                     label: value.name,
+                    value: value.id
+            }
+            }));
+        });
+    },
+      select: function(event,ui){
+      $(this).val(ui.item.label)
+      $(this).parent().find("input.hidden").val(ui.item.value)
+      return false
+    },
+    minLength: 2,
+    delay: 100
+  });
+
+    $('#albumId').autocomplete({
+      source: function(request, response) {
+      console.log(request.term)
+        var arrdata = [];
+        var json_data = $.getJSON(api + '/album/helper', {
+            keyword: request.term
+        });
+        json_data.done(function(data) {
+            //if (!$.isEmptyObject(data)) {
+            $.each(data.object, function(key, value) {
+                arrdata.push(value)
+            });
+            response($.map(arrdata, function (value, key) {
+                return{
+                    label: value.title,
                     value: value.id
             }
             }));
