--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -32,6 +32,7 @@
         <li><a href="/headline"><i class="fa fa-circle-o"></i> Headline</a></li>
         <li><a href="/gallery"><i class="fa fa-circle-o"></i> Gallery</a></li>
         <li><a href="/testimonial"><i class="fa fa-circle-o"></i> Testi</a></li>
+        <li><a href="/album"><i class="fa fa-circle-o"></i> Album</a></li>
       </ul>
     </li>
     <li class="treeview">
