add album binding to gallery testi

--- a/src/main/resources/templates/admin/forms/gallery.html
+++ b/src/main/resources/templates/admin/forms/gallery.html
@@ -213,7 +213,8 @@ form.form-border .form-group {
 
         <div class="form-group">
           <label for="albumId">Album</label>
-          <input type="text" name="albumId" class="form-control" th:value="${response.object.albumId}" id="albumId" placeholder="Pick your album" required>
+          <input type="text" class="form-control" th:value="${response.object.albumId}" id="albumId" placeholder="Pick your album" required>
+          <input type="hidden" class="hidden albumId" name="albumId" th:value="${response.object.albumId}">
         </div>
       </div>
       <div class="box-footer">
@@ -254,7 +255,11 @@ form.form-border .form-group {
           multi_page_editor();
           general_editor()
           if($('.ta_tmce').val()!= null && $('.ta_tmce').val()!=""){
-              setPageBreak();
+            setPageBreak();
+          }
+          var albumId = $('.albumId').val()
+          if(albumId != null && albumId != undefined && albumId != ''){
+            getAlbum(albumId)
           }
       });
       $('#datepickers').datepicker({
@@ -282,13 +287,11 @@ form.form-border .form-group {
             keyword: request.term
         });
         json_data.done(function(data) {
-            console.log(data.object)
             //if (!$.isEmptyObject(data)) {
             $.each(data.object, function(key, value) {
                 arrdata.push(value)
             });
             response($.map(arrdata, function (value, key) {
-            console.log(value)
                 return{
                     label: value.title,
                     value: value.id
@@ -297,6 +300,7 @@ form.form-border .form-group {
         });
     },
       select: function(event,ui){
+      console.log(ui.item.value)
       $(this).val(ui.item.label)
       $(this).parent().find("input.hidden").val(ui.item.value)
       return false
