--- a/src/main/resources/templates/admin/page/request-trip.html
+++ b/src/main/resources/templates/admin/page/request-trip.html
@@ -30,7 +30,8 @@
       <h3 class="box-title">Trip Request List</h3>
     </div>
     <div class="box-body">
-      <table id="rsp-tbl" class="table table-bordered table-hover">
+        <div class="mobile-tbl">
+          <table id="rsp-tbl" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
         <tr>
           <th>No.</th>
@@ -42,6 +43,7 @@
         </tr>
         </thead>
       </table>
+        </div>
     </div>
   </div>
 </div>
