--- a/src/main/resources/templates/admin/page/transaction.html
+++ b/src/main/resources/templates/admin/page/transaction.html
@@ -30,7 +30,8 @@
         <h3 class="box-title">Transaction List</h3>
       </div>
       <div class="box-body">
-        <table id="rsp-tbl" class="table table-bordered table-hover">
+        <div class="mobile-tbl">
+          <table id="rsp-tbl" class="table table-striped table-bordered" cellspacing="0" width="100%">
           <thead>
           <tr>
             <th>No.</th>
@@ -46,6 +47,7 @@
           <!--<th>Description</th>-->
           <!--</tfoot>-->
         </table>
+        </div>
       </div>
     </div>
   </div>
