--- a/src/main/resources/templates/admin/page/trip-itinerary.html
+++ b/src/main/resources/templates/admin/page/trip-itinerary.html
@@ -49,7 +49,8 @@
       <h3 class="box-title" th:text="${response.object.title + ' Itinerary List'}"></h3>
     </div>
     <div class="box-body">
-      <table id="rsp-tbl" class="table table-hover">
+      <div class="mobile-tbl">
+      <table id="rsp-tbl" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
         <tr>
           <th>No.</th>
@@ -64,6 +65,7 @@
         <!--<th>Description</th>-->
         <!--</tfoot>-->
       </table>
+      </div>
     </div>
   </div>
   <div class="custom-popup collapse" id="publishConfirm">
