--- a/src/main/resources/templates/admin/page/trip.html
+++ b/src/main/resources/templates/admin/page/trip.html
@@ -50,21 +50,23 @@
         <h3 class="box-title">Trip List</h3>
       </div>
       <div class="box-body">
-        <table id="rsp-tbl" class="table table-bordered table-hover">
-          <thead>
-            <tr>
-              <th>No.</th>
-              <th>Title</th>
-              <th>Duration</th>
-              <th>Captain</th>
-              <th>Status</th>
-              <th>Action</th>
-            </tr>
-          </thead>
-          <!--<tfoot>-->
-            <!--<th>Description</th>-->
-          <!--</tfoot>-->
-        </table>
+        <div class="mobile-tbl">
+          <table id="rsp-tbl" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+              <tr>
+                <th>No.</th>
+                <th>Title</th>
+                <th>Duration</th>
+                <th>Captain</th>
+                <th>Status</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <!--<tfoot>-->
+              <!--<th>Description</th>-->
+            <!--</tfoot>-->
+          </table>
+        </div>
       </div>
     </div>
     <div class="custom-popup collapse" id="publishConfirm">
