--- a/src/main/resources/static/css/si/main.css
+++ b/src/main/resources/static/css/si/main.css
@@ -17,3 +17,40 @@ label.parsley-error {
     color: #d02d2d;
     font-size: 0.9em;
 }
+
+span a {
+  color: #000 !important;
+}
+
+table#rsp-tbl .dropdown .dropdown-menu {
+  box-shadow: 2px 3px 10px 0px;
+  margin-left: -1px;
+  margin-top: -2px;
+}
+
+table#rsp-tbl .dropdown .dropdown-menu li {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  font-size: 14px;
+  margin-left: 8px;
+  font-weight: 600;
+}
+.btn-confirmation{
+  width: 40%;
+  text-align: right;
+}
+.custom-popup .popup-body {
+    padding: 15px;
+}
+.text-center {
+    text-align: center;
+}
+.custom-popup {
+    background-color: #fff;
+    color: #777;
+    text-align: center!important;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    margin-top: 50px;
+}
