--- a/src/main/resources/templates/admin/forms/gallery.html
+++ b/src/main/resources/templates/admin/forms/gallery.html
@@ -213,7 +213,7 @@ form.form-border .form-group {
 
         <div class="form-group">
           <label for="albumId">Album</label>
-          <input type="text" class="form-control" th:value="${response.object.albumId}" id="albumId" placeholder="Pick your album" required>
+          <input type="text" class="form-control" th:value="${response.object.albumId}" id="albumId" placeholder="Pick your album">
           <input type="hidden" class="hidden albumId" name="albumId" th:value="${response.object.albumId}">
         </div>
       </div>
@@ -264,7 +264,6 @@ form.form-border .form-group {
       });
       $('#datepickers').datepicker({
         format: 'mm/dd/yyyy',
-        startDate: new Date(),
       });
      });
 
