--- a/src/main/resources/templates/admin/page/trip-bike.html
+++ b/src/main/resources/templates/admin/page/trip-bike.html
@@ -46,7 +46,7 @@
 <div layout:fragment="content">
   <div class="box">
     <div class="box-header">
-      <h3 class="box-title">Motor List</h3>
+      <h3 class="box-title">Bike List</h3>
     </div>
     <div class="box-body">
       <table id="rsp-tbl" class="table table-bordered table-hover">
@@ -93,10 +93,10 @@
 </div>
 <th:block layout:fragment="footer-js">
   <!--<script type="text/javascript" src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>-->
-  <script src="../../plugins/datatables/jquery.dataTables.min.js"></script>
-  <script src="../../plugins/datatables/dataTables.bootstrap.min.js"></script>
-  <script src="../../js/si/tripPriceBikeList.js"></script>
-  <script src="../../js/si/jquery.popupoverlay.min.js"></script>
+  <script src="/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="/plugins/datatables/dataTables.bootstrap.min.js"></script>
+  <script src="/js/si/tripPriceBikeList.js"></script>
+  <script src="/js/si/jquery.popupoverlay.min.js"></script>
 </th:block>
 </body>
 </html>
