--- a/src/main/resources/templates/admin/forms/bike.html
+++ b/src/main/resources/templates/admin/forms/bike.html
@@ -2,8 +2,8 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="admin/layout">
 <head>
   <title>R2R-Motor Form</title>
-  <link type="text/css" href="../../css/jquery-ui-1.10.0.custom.css" rel="stylesheet"/>
-  <link type="text/css" href="../../css/bootstrap-tokenfield.min.css" rel="stylesheet"/>
+  <link type="text/css" href="/css/bootstrap-tokenfield.min.css" rel="stylesheet"/>
+  <link type="text/css" href="/css/jquery-ui-1.10.0.custom.css" rel="stylesheet"/>
   <style>
 .ck-editor__editable {
     min-height: 200px;
@@ -19,20 +19,28 @@
 <div layout:fragment="content">
   <div class="box box-primary">
     <div class="box-header with-border">
-      <h1 class="box-title">Bike Form</h1>
+      <h1 class="box-title">Trip Motor Form</h1>
     </div>
-    <form role="form" th:action="@{'/trip-motor/save'}" th:object="${response}" method="post" data-parsley-validate>
+    <form role="form" th:action="${action}" th:object="${response.object}" method="post" data-parsley-validate>
       <div class="box-body">
         <input id="object_id" type="hidden" name="id" th:if="${response.object.id != 0}" th:value="${response.object.id != null && response.object.id != 0 ? response.object.id : 0}">
+        <input id="tripPrice_id" type="hidden" name="tripPrice.id" th:if="${tripPriceId != 0}" th:value="${response.object.id != null && tripPriceId != 0 ? tripPriceId : 0}">
+        <th:block th:if="${param.containsKey('exists')}">
+          <div class="alert alert-danger preword">
+            <p>Motor Already Exist !</p>
+          </div>
+          <hr class="divide divide-xl">
+        </th:block>
         <div class="form-group">
           <label for="title">Motor Title</label>
-          <input type="text" class="form-control" name="title" id="title" placeholder="Motor Name" th:value="${response.object.bike.title}" required>
+          <input type="text" class="form-control" id="title" placeholder="Motor Name" th:value="${response.object.bike.title}" required>
+          <input type="hidden" id="hidden_motor" name="bike.id" th:value="${response.object.bike.id}">
         </div>
 
         <div class="form-group">
           <label for="price">Stock</label>
           <div class="input-group" id="stock">
-            <input type="number" min="0" name="price" class="form-control" placeholder="Stock" th:value="${response.object.stock}" required>
+            <input type="number" min="0" name="stock" class="form-control" placeholder="Stock" th:value="${response.object.stock}" required>
             <span class="input-group-addon">$</span>
           </div>
         </div>
@@ -44,14 +52,6 @@
             <span class="input-group-addon">$</span>
           </div>
         </div>
-
-        <!--<div class="form-group">-->
-          <!--<label for="discount">Discount</label>-->
-          <!--<div class="input-group" id="discount">-->
-            <!--<input type="number" min="0" name="discount" class="form-control" placeholder="Discount" th:value="${response.object.discount}">-->
-            <!--<span class="input-group-addon">%</span>-->
-          <!--</div>-->
-        <!--</div>-->
       </div>
       <div class="box-footer">
         <button type="submit" class="btn btn-primary">Submit</button>
@@ -60,11 +60,11 @@
   </div>
 </div>
 <th:block layout:fragment="footer-js">
-
-  <script src="../../js/si/parsley.min.js"></script>
-  <script>
-
-  </script>
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+  <script src="/js/si/bootstrap-tokenfield.min.js"></script>
+  <script src="/js/si/typehead.bundle.min.js"></script>
+  <script src="/js/si/parsley.min.js"></script>
+  <script src="/js/si/tripPriceBike.js"></script>
 </th:block>
 </body>
 </html>
