--- a/src/main/resources/templates/admin/page/price-list.html
+++ b/src/main/resources/templates/admin/page/price-list.html
@@ -38,6 +38,7 @@
           <th>End Date</th>
           <th>Price</th>
           <th>Status</th>
+          <th>Person Paid</th>
           <th>Discount</th>
           <th>Action</th>
         </tr>
