--- a/src/main/resources/templates/admin/page/trip-bike.html
+++ b/src/main/resources/templates/admin/page/trip-bike.html
@@ -46,7 +46,7 @@
 <div layout:fragment="content">
   <div class="box">
     <div class="box-header">
-      <h3 class="box-title">Bike List</h3>
+      <h3 class="box-title">Trip Motor List</h3>
     </div>
     <div class="box-body">
       <table id="rsp-tbl" class="table table-bordered table-hover">
@@ -57,7 +57,7 @@
           <th>Capacity(cc)</th>
           <th>Brand</th>
           <th>Price($)</th>
-          <th>Status</th>
+          <th>Stock</th>
           <th>Action</th>
         </tr>
         </thead>
