--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -19,7 +19,7 @@
         <li><a href="/motor"><i class="fa fa-circle-o"></i> Motors</a></li>
         <li><a href="/accessory"><i class="fa fa-circle-o"></i> Accessories</a></li>
         <li><a href="/accessory-category"><i class="fa fa-circle-o"></i> Accessory Category</a></li>
-        <li><a href="/accessory-subcategory"><i class="fa fa-circle-o"></i> Accessory Sub Category</a></li>
+        <li><a href="/accessory-category/sub-category"><i class="fa fa-circle-o"></i> Accessory Sub Category</a></li>
         <li><a href="/captain"><i class="fa fa-circle-o"></i> Captain</a></li>
       </ul>
     </li>
