--- a/src/main/resources/templates/admin/page/accessory-subcategory.html
+++ b/src/main/resources/templates/admin/page/accessory-subcategory.html
@@ -56,6 +56,7 @@
           <th>No.</th>
           <th>Title</th>
           <th>Status</th>
+          <th>Category</th>
           <th>Action</th>
         </tr>
         </thead>
